--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.3",
-    "vite": "^4.5.14"
+    "typescript": "^5.8.3",
+    "vite": "^4.5.14",
+    "vite-plugin-pwa": "^1.0.0"
   }
 }
