--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "type": "module",
   "dependencies": {
+    "lucide-react": "^0.511.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.6.1"
