--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   },
   "type": "module",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.16.0",
     "lucide-react": "^0.511.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.1"
   },
   "devDependencies": {
